welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: type mismatch;
 found   : Unit
 required: Boolean
			isNearHundred = true;
                                      ^nearHundred:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(n%100 <= 10)
        ^